<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackGround"
    android:orientation="vertical"
    tools:context="com.example.ivos.SingleScrApp_1.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/main_img1"
            style="@style/ImageStyle"
            android:adjustViewBounds="true"
            android:contentDescription="@string/img2_description"
            android:scaleType="fitCenter"
            android:src="@drawable/schrott2" />

        <TextView
            android:id="@+id/info1"
            style="@style/InfoTextStyle"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:text="@string/info_gallery" />

        <ImageView
            android:id="@+id/main_img2"
            style="@style/ImageStyle"
            android:adjustViewBounds="true"
            android:contentDescription="@string/img1_description"
            android:scaleType="fitCenter"
            android:src="@drawable/schrott011" />

        <TextView
            android:id="@+id/info0"
            style="@style/InfoTextStyle"
            android:text="@string/info_head"
            android:padding="@dimen/info_text_layout_padding"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <TextView
            android:id="@+id/location"
            style="@style/InfoTextStyle"
            android:text="@string/info_location" />

        <TextView
            android:id="@+id/tel"
            style="@style/InfoTextStyle"
            android:text="@string/info_tel" />

        <TextView
            android:id="@+id/facebook"
            style="@style/InfoTextStyle"
            android:text="@string/info_facebook" />

        <TextView
            android:id="@+id/url"
            style="@style/InfoTextStyle"
            android:text="@string/info_url" />

        <TextView
            android:id="@+id/reserve"
            style="@style/InfoTextStyle"
            android:text="@string/info_reserve" />

    </LinearLayout>
</ScrollView>

